# perfexa

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fixtures/perf-import/: configs.csv  manifest.yaml  measurements.csv  metrics.yaml  notes.yaml  runs.csv  saturation.yaml  scenarios.csv  tests.csv  topology.yaml
fixtures/real-perf-import/: configs.csv  consistent6.3.1.measurements.csv  consistent6.3.1.runs.csv  heap6.3.1.measurements.csv  heap6.3.1.runs.csv  heap6.3.x.measurements.csv  heap6.3.x.runs.csv  kvs6.3.1.measurements.csv  kvs6.3.1.runs.csv  manifest.yaml  measurements.csv  measurements22.csv  metrics.yaml  none6.3.1.measurements.csv  none6.3.1.runs.csv  none6.3.x.measurements.csv  none6.3.x.runs.csv  notes.yaml  runs.csv  saturation.yaml  scenario-help.yaml  scenarios.csv  tests.csv  topology.yaml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  AppState.tsx  Shell.tsx  dashboardStore.ts  dashboardWindow.ts  githubImport.ts  importSources.test.ts  importSources.ts  routes.ts
src/components/: DataTable.tsx  HelpModal.tsx  StatusPill.tsx
src/domain/: aggregation.ts  csv.ts  featureRegistry.ts  importContract.test.ts  importContract.ts  regression.test.ts  regression.ts  saturation.ts  schemas.ts  selectors.test.ts  selectors.ts  sizingModels.test.ts  sizingModels.ts  topologyMetrics.test.ts  topologyMetrics.ts  types.ts
src/storage/: database.test.ts  database.ts
(+18 files in other folders)
